2.1.0/_sources/gallery/pyplots/whats_new_98_4_legend.rst.txt


.. _sphx_glr_gallery_pyplots_whats_new_98_4_legend.py:


=======================
Whats New 0.98.4 Legend
=======================





.. image:: /gallery/pyplots/images/sphx_glr_whats_new_98_4_legend_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np


    ax = plt.subplot(111)
    t1 = np.arange(0.0, 1.0, 0.01)
    for n in [1, 2, 3, 4]:
        plt.plot(t1, t1**n, label="n=%d"%(n,))

    leg = plt.legend(loc='best', ncol=2, mode="expand", shadow=True, fancybox=True)
    leg.get_frame().set_alpha(0.5)


    plt.show()

**Total running time of the script:** ( 0 minutes  0.023 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_98_4_legend.py <whats_new_98_4_legend.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_98_4_legend.ipynb <whats_new_98_4_legend.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
